Fix `<ManualPreview>` gaps and sizing

--- a/components/ManualPreview/ManualPreview.module.css
+++ b/components/ManualPreview/ManualPreview.module.css
@@ -8,10 +8,9 @@
     margin: 0;
     border-radius: .4em;
     aspect-ratio: 16 / 10;
-    margin-bottom: 1em;
     text-decoration: none;
     font-weight: 500;
-    font-size: clamp(18px, 5vw, 22px);
+    font-size: clamp(18px, 5vw, 21px);
 }
 
 .manual:focus-visible {
@@ -81,13 +80,12 @@
 
 .manualTitle {
     position: relative;
-    font-size: clamp(18px, 5vw, 22px);
     font-weight: 400;
     margin-bottom: .25em;
 }
 
 .manualSubtitle {
-    font-size: .55em;
+    font-size: .65em;
     font-weight: 300;
 }
 
@@ -129,13 +127,36 @@
 
 @media screen and (min-width: 991px) {
     .manual {
-        width: calc(100% / 3 - 2vw);
+        width: calc(100% / 3 - 1.1vw);
+    }
+
+    .manualSubtitle {
+        font-size: .75em;
     }
 }
 
 @media screen and (min-width: 1440px) {
     .manual {
-        width: calc(100% / 4 - 2vw);
+        font-size: 1.25vw;
+        width: calc(100% / 4 - 1.15vw);
+    }
+}
+
+@media screen and (min-width: 1900px) {
+    .manual {
+        font-size: 1.2vw;
+    }
+
+    .manualTitle {
+        margin-bottom: .5em;
+    }
+    
+    .manualSubtitle {
+        font-size: .8em;
+    }
+
+    .manualInner {
+        padding: 1em;
     }
 }
 
