--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -35,7 +35,7 @@
 
 @media screen and (min-width: 991px) {
     .manualsSection {
-        gap: 2.486vw;
+        gap: 1.5vw;
     }
 
     .mainTitle {
